--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
+/** @format */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   background-color: white !important;
 }
 
@@ -57,7 +59,8 @@ form {
   width: 250px;
 }
 
-input, select {
+input,
+select {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
@@ -85,8 +88,8 @@ button {
   border-radius: 50px !important ;
   padding: 7px 15px !important;
   text-align: center;
+  transition: 0.3s ease-in-out;
 }
-
 
 /* Clerk */
 .cl-button {
@@ -129,4 +132,8 @@ button {
 .cl-avatarBox {
   width: 100%;
   height: 100%;
+}
+
+button:hover {
+  scale: 0.9;
 }
