--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
 body {
+  font-family: "Ubuntu", sans-serif;
   background-color: white !important;
+}
+html {
+  scroll-behavior: smooth;
 }
 
 /* Form Section */
@@ -128,6 +134,7 @@ button {
   background-color: white;
   width: 40px;
   height: 40px;
+  padding: 0 !important;
 }
 .cl-avatarBox {
   width: 100%;
@@ -136,4 +143,40 @@ button {
 
 button:hover {
   scale: 0.9;
+}
+/* Listings */
+#listing {
+  padding: 40px 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.list {
+  position: relative;
+  overflow: hidden;
+}
+
+.shine {
+  position: absolute;
+  top: -50%;
+  right: -50%;
+  width: 200%;
+  height: 200%;
+  background: rgba(255, 255, 255, 0.5);
+  transition: transform 1s;
+  transform: rotate(45deg);
+  opacity: 0;
+}
+
+.list:hover .shine {
+  transform: translate(100%, 100%) rotate(45deg);
+  opacity: 1;
+}
+#listing_div {
+  display: flex;
+  width: 100%;
+  gap: 40px;
+  justify-content: center;
+  flex-wrap: wrap;
 }
